Added spring boot actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# Use wildcard "*" to expose all endpoints
+# Can also expose individual endpoints with a comma-delimited list
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
 
+info.app.name=SpringBootDemo
+info.app.description=A spring boot demo app
+info.app.version=1.0.0
