Injected custom application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ management.info.env.enabled=true
 info.app.name=SpringBootDemo
 info.app.description=A spring boot demo app
 info.app.version=1.0.0
+
+#
+# Define my properties
+#
+coach.name = John van 't Schip
+team.name = Ajax
