Configured the Spring Boot server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,15 @@ info.app.version=1.0.0
 #
 coach.name = John van 't Schip
 team.name = Ajax
+
+#
+# Change spring boot embedded server port
+#
+server.port=7070
+
+#
+# Set the context path of the application
+#
+# All requests should be prefixed with with /springbootdemo
+#
+server.servlet.context-path=/springbootdemo
